--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200;12..96,300;12..96,400;12..96,500;12..96,600;12..96,700;12..96,800&display=swap"
+      rel="stylesheet"
+    />
     <title>March Madness Bracket</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="intro">
+      <h1 class="logo-header">
+        <span class="logo">br</span><span class="logo">ac</span
+        ><span class="logo">ke</span><span class="logo">to</span
+        ><span class="logo">lo</span><span class="logo">gy</span
+        ><span class="logo">.</span>
+      </h1>
+    </div>
+
+    <header>
+      <h4>bracketology.</h4>
+    </header>
+
+    <script src="apps.js"></script>
+  </body>
 </html>
